# TagLogger

./: .pre-commit-config.yaml  Dockerfile  README.md  app.json  config.py  main.py  pyproject.toml
.github/workflows/: release.yml
