[tool.poetry]
name = "taglogger"
version = "1.0.0"
description = "Simple Bot for notify you in a Group when you were Tagged"
authors = ["Divanshu Chauhan <divkix@divkix.me>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
Pyrogram = "^2.0.100"
TgCrypto = "^1.2.5"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
pylint = "^2.16.2"
pre-commit = "^3.1.0"
isort = "^5.12.0"
pyclean = "^2.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
